Added button for doc site contributions, removed from side nav list to separate from components

--- a/demo-app/app/app.component.html
+++ b/demo-app/app/app.component.html
@@ -8,7 +8,9 @@
         <h3><a mat-list-item [routerLink]="[item.route]"><span mat-line>{{ item.name }}</span></a></h3>
       </div>
     </mat-nav-list>
-
+    <ign-center><pre><a mat-raised-button color = "accent" [routerLink]="['contribution']">
+      Doc Site Contributions
+    </a></pre></ign-center>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar>
