--- a/demo-app/app/testing/components/aaa/aaa.component.html
+++ b/demo-app/app/testing/components/aaa/aaa.component.html
@@ -11,8 +11,9 @@
     <p>
         <span style="text-decoration: underline">Assert</span> to make sure that your expectations are met.</p>
 
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 it('should call closeDrawer when click event emitted', () => {{ '{' }}
     //Arrange
     de = fixture.debugElement.query(By.css('.close-icon'));
@@ -25,6 +26,7 @@ it('should call closeDrawer when click event emitted', () => {{ '{' }}
     //Assert
     expect(component.closeDrawer).toHaveBeenCalled();
 });
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 </div>
