--- a/demo-app/app/testing/components/asynchronous/asynchronous.component.html
+++ b/demo-app/app/testing/components/asynchronous/asynchronous.component.html
@@ -5,8 +5,9 @@
     <h2>1. Angular Testing Utility - async/fixture.whenStable()</h2>
     <p>a. Will return a promise when the asynchronous operations are done and the fixture is stable.</p>
     <p>b. Assert inside the callback block.</p>
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 it('should set endDate html element', async (() => {{ '{' }}
     let de = fixture.debugElement.query(By.css('#end-date-input'));
     let ne: HTMLInputElement = de.nativeElement;
@@ -18,14 +19,16 @@ it('should set endDate html element', async (() => {{ '{' }}
         expect(ne.value).toEqual(component.endDate);
     });
 }));
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 
     <h2>2. Angular Testing Utility - fakeAsync/tick()</h2>
     <p>a. tick() method will execute any asynchronous tasks in the queue.</p>
     <p>b. tick(100) would execute any asynchronous tasks that would occur within 100ms.</p>
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 it('should set endDate html element', fakeAsync (() => {{ '{' }}
     let de = fixture.debugElement.query(By.css('#end-date-input'));
     let ne: HTMLInputElement = de.nativeElement;
@@ -36,14 +39,17 @@ it('should set endDate html element', fakeAsync (() => {{ '{' }}
 
     expect(ne.value).toEqual(component.endDate);
 }));
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 
     <h2>3. ES8 Async Functions</h2>
     <p>a. Built on top of Promises.</p>
     <p>b. Await works with Promises, not callbacks.</p>
-    <pre>
-        <code class="code-block">
+
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 it('should set endDate html element', async () => {{ '{' }}
     let de = fixture.debugElement.query(By.css('#end-date-input'));
     let ne: HTMLInputElement = de.nativeElement;
@@ -53,6 +59,7 @@ it('should set endDate html element', async () => {{ '{' }}
 
     expect(ne.value).toEqual(component.endDate);
 });
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 </div>
