--- a/demo-app/app/testing/components/test-types/test-types.component.html
+++ b/demo-app/app/testing/components/test-types/test-types.component.html
@@ -5,8 +5,9 @@
 
     <h2>Unit Tests</h2>
     <p>Test the JavaScript file in isolation and mock out services as you need them. Unit Tests don't use the Angular Testing Utilities. (*.unit.spec.ts)</p>
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 describe('AppComponent', () => {{ '{' }}
     let component: AppComponent;
 
@@ -18,13 +19,15 @@ describe('AppComponent', () => {{ '{' }}
         expect(component).toBeTruthy();
     });
 });
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 
     <h2>Integration Tests</h2>
     <p>Use the Angular Testing Utilities to generate the Angular environment to test. Check JavaScript integration with the template. Mock out services as you need them. (*.spec.ts)</p>
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 describe('AppComponent', () => {{ '{' }}
     let fixture: ComponentFixture&lt;AppComponent&gt;;
     let component: AppComponent;
@@ -48,13 +51,15 @@ describe('AppComponent', () => {{ '{' }}
         expect(component).toBeTruthy();
     });
 });
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 
     <h2>End 2 End Tests</h2>
     <p>Testing the application as a whole. Simulate a user through real world scenarios. (*.e2e-spec.ts)</p>
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 describe('test-app1 App', () => {{ '{' }}
     let page: AppPage;
 
@@ -68,13 +73,14 @@ describe('test-app1 App', () => {{ '{' }}
         expect(page.getParagraphTest()).toEqual('Welcome to app!');
     });
 });
-        </code>
-    </pre>
-
+            </code>
+        </pre>
+    </mat-card>
     <h2>Snapshot Testing</h2>
     <p>Will serialize component and create reference image. When snapshot test is run, it will fail if the two images do not match. (*.spec.ts)</p>
-    <pre>
-        <code class="code-block">
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 exports[`renders correctly 1`] = `
 &lt;a
     className="normal"
@@ -85,10 +91,12 @@ exports[`renders correctly 1`] = `
     Facebook
     &lt;/a&gt;
 `;
-        </code>
-    </pre>
-    <pre>
-        <code class="code-block">
+            </code>
+        </pre>
+    </mat-card>
+    <mat-card class='code-block-card'>
+        <pre>
+            <code class="code-block">
 Received value does not match stored snapshot 1.
 
 - Snapshot
@@ -103,6 +111,7 @@ Received value does not match stored snapshot 1.
 -   Facebook
 +   Instagram
 &lt;a&gt;
-        </code>
-    </pre>
+            </code>
+        </pre>
+    </mat-card>
 </div>
