--- a/demo-app/styles.scss
+++ b/demo-app/styles.scss
@@ -236,13 +236,16 @@ pre {
   background-color: #EFF2F4;
   overflow: auto;
   width: min-content;
-  padding: 0.5em;
+  height: min-content;
 }
 
 .code-block {
   font-family: Courier New, Courier, monospace;
-  font-size: 1em;
-  line-height: 100%;
-  word-break: break-all;
-  padding: 0.5em;
+}
+
+.code-block-card {
+  width: min-content;
+  height: min-content;
+  background-color: #EFF2F4;
+  margin: 0.5em;
 }
