--- a/demo-app/app/testing/components/status/status.component.css
+++ b/demo-app/app/testing/components/status/status.component.css
@@ -1,6 +1,6 @@
 .status-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: repeat(6, auto);
     grid-column-gap: 10px;
     grid-row-gap: 10px;
